--- a/gradle.properties
+++ b/gradle.properties
@@ -12,5 +12,5 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 # 标示各个业务组件是否以 application 单独运行，修改后需要同步才能生效
-isRunAlone=true
+isRunAlone=false
 
