--- a/common_base/build.gradle
+++ b/common_base/build.gradle
@@ -65,5 +65,5 @@ dependencies {
     api rootProject.ext.dependencies['andpermission']
     api rootProject.ext.dependencies['eventbus']
     api rootProject.ext.dependencies['aspectj']
-
+    api rootProject.ext.dependencies['material-dialogs']
 }
