--- a/module_quality/src/main/AndroidManifest.xml
+++ b/module_quality/src/main/AndroidManifest.xml
@@ -7,15 +7,13 @@
             android:name=".activity.QualityActivity"
             android:exported="false"></activity>
         <activity
-            android:name=".activity.MainActivity"
-            android:exported="false"></activity>
-        <activity
             android:name=".activity.PlanActivity"
             android:exported="false"></activity>
         <activity
             android:name=".activity.QualityListActivity"
             android:exported="false"></activity>
 
+        <service android:name=".service.DownloadService"></service>
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.xing.module.quality.fileprovider"
