--- a/gradle.properties
+++ b/gradle.properties
@@ -13,4 +13,6 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 # 标示各个业务组件是否以 application 单独运行，修改后需要同步才能生效
 isRunAlone=false
-
+# 新建module问题 project needs to be converted to androidx.* dependencies  创建时使用，创建完注销
+#android.useAndroidX=true
+#android.enableJetifier=true
