--- a/module_usercenter/src/main/debug/AndroidManifest.xml
+++ b/module_usercenter/src/main/debug/AndroidManifest.xml
@@ -27,6 +27,10 @@
             android:name=".activity.RegisterActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.SettingActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
