--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':common_base', ':module_usercenter', ':module_main', ':module_gank', ':module_quality'
+include ':app', ':common_base', ':module_usercenter', ':module_main', ':module_gank', ':module_quality', ':module_ticket'
